--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -10,7 +10,7 @@
 
 - name: Debug vars
   debug:
-    var: groups['infoblox']
+    var: hostvars(groups['infoblox'])
 
 - name: Debug vars
   debug:
