--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -1,9 +1,8 @@
 ---
 
 - name: Debug vars
-  debug:
-    var: hostvars[groups['infoblox'][0]].network_interfaces[1].association.public_ip
-#        ip: "{{ hostvars[groups['fortigate'][0]].private_ip_address }}"
+  set_fact:
+    infoblox_ip: hostvars[groups['infoblox'][0]].network_interfaces[1].association.public_ip
 
 - name: Debug vars
   debug:
