--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -3,9 +3,9 @@
 - name: Get Infoblox Public IPv4
   set_fact:
     provider:
-      host: hostvars[groups['infoblox'][0]].network_interfaces[1].association.public_ip
-      username: username
-      password: password
+      host: "{{ hostvars[groups['infoblox'][0]].network_interfaces[1].association.public_ip }}"
+      username: "{{ username }}"
+      password: "{{ password }}"
 
 - name: Debug Infoblox Public IPv4
   debug:
