--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -15,6 +15,11 @@
   ansible.builtin.set_fact:
     networks: "{{ lookup('infoblox.nios_modules.nios_lookup', 'network', provider=provider) }}"
 
+- name: For single network case (it returns a )
+  set fact:
+    networks: [ "{{ networks }}" ]
+  when: networks | type_debug != "list"
+
 - name: Debug Existing Networks
   debug:
     msg: "Network: {{ item.network }}"
