--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: For the single network particualr case (it returns a dict)
   set fact:
-    networks: "{{ [ networks ] }}"
+    networks: "{{ networks | list }}""
   when: networks | type_debug != "list"
 
 - name: Debug Existing Networks
