--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -33,25 +33,33 @@
     container: true
     state: present
 
-- name: Create an IPv4 Network {{ ipv4_network }}
-  infoblox.nios_modules.nios_network:
-    provider: "{{ provider }}"
-    network: "{{ ipv4_network }}"
-    comment: "Network {{ ipv4_network }}"
-    state: present
+# - name: Create an IPv4 Network {{ ipv4_network }}/{{ ipv4_network_cidr }}
+#   infoblox.nios_modules.nios_network:
+#     provider: "{{ provider }}"
+#     network: "{{ ipv4_network }}/{{ ipv4_network_cidr }}"
+#     comment: "Created Network {{ ipv4_network }}/{{ ipv4_network_cidr }}"
+#     state: present
+
+- name: Get Next Available Network from Network Container {{ ipv4_container }}
+  ansible.builtin.set_fact:
+    ipv4_network: "{{ lookup('infoblox.nios_modules.nios_next_network', ipv4_container, ipv4_network_cidr, provider=provider) }}"
+
+- name: Debug Next Available IPv4 Network {{ ipv4_network }}
+  debug:
+    msg: "Next Available IPv4 Network is {{ ipv4_network }}"
 
 - name: Get Next IPv4 Address from Network {{ ipv4_network }}
   ansible.builtin.set_fact:
     provider: "{{ provider }}"
-    ip_address: "{{ lookup('infoblox.nios_modules.nios_next_ip', ipv4_network, provider=provider) }}"
+    ipv4_address: "{{ lookup('infoblox.nios_modules.nios_next_ip', ipv4_network, provider=provider) }}"
 
-- name: Debug Next IPv4 Address {{ ip_address }}
+- name: Debug Next IPv4 Address {{ ipv4_address }}
   debug:
-    msg: "Next IPv4 address from Network {{ ipv4_network }} is {{ ip_address }}"
+    msg: "Next IPv4 address from Network {{ ipv4_network }} is {{ ipv4_address }}"
 
 # - name: Delete an IPv4 Network {{ ipv4_network }}
 #   infoblox.nios_modules.nios_network:
 #     provider: "{{ provider }}"
-#     network: "{{ ipv4_network }}"
-#     comment: "Network {{ ipv4_network }}"
+#     network: "{{ ipv4_network }}/{{ ipv4_network_cidr }}"
+#     comment: "Deleted Network {{ ipv4_network }}/{{ ipv4_network_cidr }}"
 #     state: absent
