--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -37,11 +37,11 @@
   ansible.builtin.set_fact:
     ipv4_network: "{{ lookup('infoblox.nios_modules.nios_next_network', ipv4_container, ipv4_network_cidr, provider=provider) }}"
 
-- name: Create an IPv4 Network {{ ipv4_network }}/{{ ipv4_network_cidr }}
+- name: Create an IPv4 Network {{ ipv4_network }}
   infoblox.nios_modules.nios_network:
     provider: "{{ provider }}"
-    network: "{{ ipv4_network }}/{{ ipv4_network_cidr }}"
-    comment: "Created Network {{ ipv4_network }}/{{ ipv4_network_cidr }}"
+    network: "{{ ipv4_network }}"
+    comment: "Created Network {{ ipv4_network }}"
     state: present
 
 - name: Debug Next Available IPv4 Network {{ ipv4_network }}
@@ -60,6 +60,6 @@
 # - name: Delete an IPv4 Network {{ ipv4_network }}
 #   infoblox.nios_modules.nios_network:
 #     provider: "{{ provider }}"
-#     network: "{{ ipv4_network }}/{{ ipv4_network_cidr }}"
-#     comment: "Deleted Network {{ ipv4_network }}/{{ ipv4_network_cidr }}"
+#     network: "{{ ipv4_network }}"
+#     comment: "Deleted Network {{ ipv4_network }}"
 #     state: absent
