--- a/roles/aws_infoblox_config/defaults/main.yml
+++ b/roles/aws_infoblox_config/defaults/main.yml
@@ -3,6 +3,7 @@
 username: admin
 password: "admin123$%&"
 
+network_view = MyNetworkView
 ipv4_container: 192.168.0.0/16
 ipv4_network: 192.168.1.0/24
 ipv4_network_cidr: 24
