--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -22,7 +22,7 @@
 
 - name: Debug Existing Network Views
   debug:
-    msg: "Network Views: {{ item.networkviews }}"
+    msg: "Network Views: {{ item.name }}"
   loop: "{{ network_views }}"
 
 - name: Get Existing Networks
