--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -56,7 +56,8 @@
 
 - name: Get Next Available Network from Network Container {{ ipv4_container }}
   ansible.builtin.set_fact:
-    ipv4_network: "{{ lookup('infoblox.nios_modules.nios_next_network', ipv4_container, ipv4_network_cidr, network_view=network_view, provider=provider) }}"
+    ipv4_network: "{{ lookup('infoblox.nios_modules.nios_next_network', ipv4_container, ipv4_network_cidr,
+      num=1, exclude=ipv4_excluded_networks, network_view=network_view, provider=provider) }}"
 
 - name: Create an IPv4 Network {{ ipv4_network }}
   infoblox.nios_modules.nios_network:
@@ -73,7 +74,8 @@
 - name: Get Next IPv4 Address from Network {{ ipv4_network }}
   ansible.builtin.set_fact:
     provider: "{{ provider }}"
-    ipv4_address: "{{ lookup('infoblox.nios_modules.nios_next_ip', ipv4_network, network_view=network_view, num=1, exclude=[], provider=provider) }}"
+    ipv4_address: "{{ lookup('infoblox.nios_modules.nios_next_ip', ipv4_network, network_view=network_view,
+    num=1, exclude=[], provider=provider) }}"
 
 - name: Debug Next IPv4 Address {{ ipv4_address }}
   debug:
