--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -63,7 +63,7 @@
   infoblox.nios_modules.nios_network:
     provider: "{{ provider }}"
     network_view: "{{ network_view }}"
-    network: "192.168.10.0/24" # "{{ ipv4_network }}"
+    network: "{{ ipv4_network }}"
     comment: "Created Network {{ ipv4_network }}"
     state: present
 
