--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -57,13 +57,13 @@
 - name: Get Next Available Network from Network Container {{ ipv4_container }}
   ansible.builtin.set_fact:
     ipv4_network: "{{ lookup('infoblox.nios_modules.nios_next_network', ipv4_container, ipv4_network_cidr,
-      num=1, exclude=ipv4_excluded_networks, network_view=network_view, provider=provider) }}"
+      num=1, exclude=ipv4_excluded_networks, network_view=network_view, provider=provider)[0] }}"
 
 - name: Create an IPv4 Network {{ ipv4_network }}
   infoblox.nios_modules.nios_network:
     provider: "{{ provider }}"
     network_view: "{{ network_view }}"
-    network: "192.168.10.0/24" #"{{ ipv4_network }}"
+    network: "{{ ipv4_network }}"
     comment: "Created Network {{ ipv4_network }}"
     state: present
 
@@ -75,7 +75,7 @@
   ansible.builtin.set_fact:
     provider: "{{ provider }}"
     ipv4_address: "{{ lookup('infoblox.nios_modules.nios_next_ip', ipv4_network, network_view=network_view,
-    num=1, exclude=ipv4_excluded_addresses, provider=provider) }}"
+    num=1, exclude=ipv4_excluded_addresses, provider=provider)[0] }}"
 
 - name: Debug Next IPv4 Address {{ ipv4_address }}
   debug:
