--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -89,6 +89,15 @@
 #     comment: "Deleted Network {{ ipv4_network }}"
 #     state: absent
 
+# - name: Delete an IPv4 Container Network {{ ipv4_container }}
+#   infoblox.nios_modules.nios_network:
+#     provider: "{{ provider }}"
+#     network_view: "{{ network_view }}"
+#     network: "{{ ipv4_container }}"
+#     comment: "Deleted Container Network {{ ipv4_container }}"
+#     container: true
+#     state: absent
+
 # - name: Delete a Network View {{ network_view }}
 #   infoblox.nios_modules.nios_network_view:
 #     provider: "{{ provider }}"
