--- a/roles/aws_infoblox_config/defaults/main.yml
+++ b/roles/aws_infoblox_config/defaults/main.yml
@@ -9,3 +9,4 @@ ipv4_excluded_networks: []
 #ipv4_network: 192.168.1.0/24
 ipv4_network_cidr: 24
 ipv4_excluded_addresses: []
+mac_address: "00:00:00:00:00:00"
