--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -86,8 +86,9 @@
     provider: "{{ provider }}"
     network: 192.168.10.0/24
     network_view: default
-    name: host address
+    name: host1.redhat.com
     ipaddr: "{{ ipv4_address }}"
+    mac: "{{ mac_address }}"
     comment: "Created Host {{ ipv4_network }}"
     state: present
 
