--- a/roles/aws_infoblox_config/defaults/main.yml
+++ b/roles/aws_infoblox_config/defaults/main.yml
@@ -10,3 +10,4 @@ ipv4_excluded_networks: []
 ipv4_network_cidr: 24
 ipv4_excluded_addresses: []
 mac_address: "00:00:00:00:00:00"
+hostname: "host1.redhat.com"
