--- a/roles/aws_infoblox_config/defaults/main.yml
+++ b/roles/aws_infoblox_config/defaults/main.yml
@@ -5,9 +5,11 @@ password: "admin123$%&"
 
 network_view: MyNetworkView
 ipv4_container: 192.168.0.0/16
-ipv4_excluded_networks: []
+ipv4_excluded_networks:
+  - 192.168.0.0/24
 #ipv4_network: 192.168.1.0/24
 ipv4_network_cidr: 24
-ipv4_excluded_addresses: []
+ipv4_excluded_addresses:
+  - 192.168.1.0/24
 mac_address: "00:00:00:00:00:00"
 hostname: "host1.redhat.com"
