--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -89,30 +89,39 @@
     name: "{{ hostname }}"
     ipaddr: "{{ ipv4_address }}"
     mac: "{{ mac_address }}"
-    comment: "Created Host {{ ipv4_network }}"
+    comment: "Created Fixed IPv4 Address {{ ipv4_network }}"
     state: present
 
+- name: Delete IPv4 Fixed Address {{ ipv4_address }}
+  infoblox.nios_modules.nios_fixed_address:
+    provider: "{{ provider }}"
+    network_view: "{{ network_view }}"
+    network: "{{ ipv4_network }}"
+    name: "{{ hostname }}"
+    ipaddr: "{{ ipv4_address }}"
+    mac: "{{ mac_address }}"
+    comment: "Deleted Fixed IPv4 Address {{ ipv4_network }}"
+    state: absent
 
+- name: Delete an IPv4 Network {{ ipv4_network }}
+  infoblox.nios_modules.nios_network:
+    provider: "{{ provider }}"
+    network_view: "{{ network_view }}"
+    network: "{{ ipv4_network }}"
+    comment: "Deleted Network {{ ipv4_network }}"
+    state: absent
 
-# - name: Delete an IPv4 Network {{ ipv4_network }}
-#   infoblox.nios_modules.nios_network:
-#     provider: "{{ provider }}"
-#     network_view: "{{ network_view }}"
-#     network: "{{ ipv4_network }}"
-#     comment: "Deleted Network {{ ipv4_network }}"
-#     state: absent
+- name: Delete an IPv4 Container Network {{ ipv4_container }}
+  infoblox.nios_modules.nios_network:
+    provider: "{{ provider }}"
+    network_view: "{{ network_view }}"
+    network: "{{ ipv4_container }}"
+    comment: "Deleted Container Network {{ ipv4_container }}"
+    container: true
+    state: absent
 
-# - name: Delete an IPv4 Container Network {{ ipv4_container }}
-#   infoblox.nios_modules.nios_network:
-#     provider: "{{ provider }}"
-#     network_view: "{{ network_view }}"
-#     network: "{{ ipv4_container }}"
-#     comment: "Deleted Container Network {{ ipv4_container }}"
-#     container: true
-#     state: absent
-
-# - name: Delete a Network View {{ network_view }}
-#   infoblox.nios_modules.nios_network_view:
-#     provider: "{{ provider }}"
-#     name: "{{ network_view }}"
-#     state: absent
+- name: Delete a Network View {{ network_view }}
+  infoblox.nios_modules.nios_network_view:
+    provider: "{{ provider }}"
+    name: "{{ network_view }}"
+    state: absent
