--- a/aws_infoblox_undeploy.yml
+++ b/aws_infoblox_undeploy.yml
@@ -1,6 +1,7 @@
-- name: AWS Infoblox delete
+- name: AWS Infoblox undeploy
   hosts: localhost
   connection: local
+  vars_files: vars/main.yml
   gather_facts: no
   roles:
     - aws_infoblox_undeploy
