--- a/aws_infoblox_assignip.yml
+++ b/aws_infoblox_assignip.yml
@@ -24,6 +24,34 @@
       debug:
         var: provider
 
+    - name: Get Existing Network Views
+      ansible.builtin.set_fact:
+        network_views: "{{ lookup('infoblox.nios_modules.nios_lookup', 'networkview', provider=provider) }}"
+
+    - name: For the single network view particular case (it returns a dict)
+      set_fact:
+        network_views: "{{ [ network_views ] }}"
+      when: network_views | type_debug != "list"
+
+    - name: Debug Existing Network Views
+      debug:
+        msg: "Network Views: {{ item.name }}"
+      loop: "{{ network_views }}"
+
+    - name: Get Existing Networks
+      ansible.builtin.set_fact:
+        networks: "{{ lookup('infoblox.nios_modules.nios_lookup', 'network', network_view=network_view, provider=provider) }}"
+
+    - name: For the single network particular case (it returns a dict)
+      set_fact:
+        networks: "{{ [ networks ] }}"
+      when: networks | type_debug != "list"
+
+    - name: Debug Existing Networks
+      debug:
+        msg: "Network: {{ item.network }}"
+      loop: "{{ networks }}"
+
     - name: Create a Network View {{ network_view }}
       infoblox.nios_modules.nios_network_view:
         provider: "{{ provider }}"
