--- a/vars/main.yml
+++ b/vars/main.yml
@@ -64,7 +64,7 @@ network_view: MyNetworkView
 ipv4_container: 192.168.0.0/16
 ipv4_excluded_networks:
   - 192.168.0.0/24
-#ipv4_network: 192.168.1.0/24
+ipv4_network: 192.168.10.0/24
 ipv4_network_cidr: 24
 ipv4_excluded_addresses:
   - 192.168.1.0
