--- a/aws_infoblox_config.yml
+++ b/aws_infoblox_config.yml
@@ -15,6 +15,8 @@
   gather_facts: no
   vars_files: vars/main.yml
   tasks:
+    - debug
+        var: hostvars[groups['infoblox'][0]]
     - name: Set Provider Infoblox Data
       set_fact:
         provider:
