--- a/aws_infoblox_config.yml
+++ b/aws_infoblox_config.yml
@@ -28,6 +28,13 @@
       debug:
         var: provider
 
+    - name: Create a DNS View {{ dns_view }}
+      infoblox.nios_modules.nios_dns_view:
+        provider: "{{ provider }}"
+        name: "{{ dns_view }}"
+        comment: "DNS View {{ network_view }}"
+        state: present
+
     - name: Create a Network View {{ network_view }}
       infoblox.nios_modules.nios_network_view:
         provider: "{{ provider }}"
