--- a/aws_infoblox_unconfig.yml
+++ b/aws_infoblox_unconfig.yml
@@ -52,14 +52,22 @@
         provider: "{{ provider }}"
         network_view: "{{ network_view }}"
         network: "{{ ipv4_container }}"
-        comment: "Deleted Container Network {{ ipv4_container }}"
+        comment: "Delete Container Network {{ ipv4_container }}"
         container: true
+        state: absent
+
+    - name: Create a DNS View {{ dns_view }}
+      infoblox.nios_modules.nios_dns_view:
+        provider: "{{ provider }}"
+        name: "{{ dns_view }}"
+        network_view: "{{ network_view }}"
+        comment: "Delete DNS View {{ dns_view }}"
         state: absent
 
     - name: Delete a Network View {{ network_view }}
       infoblox.nios_modules.nios_network_view:
         provider: "{{ provider }}"
         name: "{{ network_view }}"
-        comment: "Network View {{ network_view }}"
+        comment: "Delete Network View {{ network_view }}"
         state: absent
   
