--- a/aws_infoblox_query.yml
+++ b/aws_infoblox_query.yml
@@ -83,3 +83,17 @@
       debug:
         msg: "Network: {{ item.network }}"
       loop: "{{ networks }}"
+
+    - name: Get Existing A Records
+      ansible.builtin.set_fact:
+        arecords: "{{ lookup('infoblox.nios_modules.nios_lookup', 'record:a', provider=provider) }}"
+
+    - name: For the single A record particular case (it returns a dict)
+      set_fact:
+        arecords: "{{ [ arecords ] }}"
+      when: arecords | type_debug != "list"
+
+    - name: Debug Existing A Records
+      debug:
+        msg: "A Records: {{ item.arecords }}"
+      loop: "{{ arecords }}"
