--- a/aws_infoblox_query.yml
+++ b/aws_infoblox_query.yml
@@ -109,5 +109,5 @@
 
     - name: Debug Existing A Records
       debug:
-        msg: "A Records: {{ item.fixedaddresses }}"
+        msg: "A Records: {{ item.ipv4addr }}"
       loop: "{{ fixedaddresses }}"
