--- a/vars/main.yml
+++ b/vars/main.yml
@@ -71,5 +71,5 @@ ipv4_network_cidr: 24
 ipv4_excluded_addresses:
   - 192.168.1.0
 mac_address: "00:00:00:00:00:00"
-ipv4_hostname: "host1.redhat.com"
+ipv4_hostname: "host1.ansible.redhat.com"
 
