--- a/vars/main.yml
+++ b/vars/main.yml
@@ -60,7 +60,7 @@ volumes:
 username: "{{ ansible_user }}"
 password: "{{ ansible_ssh_pass }}"
 
-dns_view: MyDNSView3
+dns_view: MyDNSView
 dns_zone: ansible.redhat.com
 network_view: MyNetworkView
 ipv4_container: 192.168.0.0/16
